--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cifrados Cesar</title>
+    <title>Conzeptos Cifrados Cesar</title>
     <link href='index.css' rel='stylesheet'>
     <script src="index.js" type="text/javascript" ></script>
     
 </head>
 <body>
     <main>
-        <h1>Cifrador Cesar</h1>
+        <h1>Conzeptos Cifrador Cesar</h1>
         <form id="cifrador" autocomplete="off">
             <input id="input-original" spellcheck="false" placeholder="Ingrese el texto" type="text" name="text">
         </form>
