--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conzeptos Cifrados Cesar</title>
     <link href='index.css' rel='stylesheet'>
-    <script src="index.js" type="text/javascript" ></script>
+    <script src="index.js" type="text/javascript" defer></script>
     
 </head>
 <body>
