--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <h1>Conzeptos SC Cifrador Cesar</h1>
+        <h1>Conzeptos S.C. Cifrador Cesar.</h1>
         <form id="cifrador" autocomplete="off">
             <input id="input-original" spellcheck="false" placeholder="Ingrese el texto" type="text" name="text">
         </form>
